@@ -1,3 +1,10 @@
+2019-07-31  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/91293
+	* gcc.dg/vect/pr91293-1.c: New testcase.
+	* gcc.dg/vect/pr91293-2.c: Likewise.
+	* gcc.dg/vect/pr91293-3.c: Likewise.
+
 2019-07-31  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/91201
